crates/compiler/parser/tests/snapshots/toplevel::toplevel_const.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
const MAX_SIZE = 100;
--- AST ---
[
    Const(
        Spanned(
            ConstDef {
                name: Spanned(
                    "MAX_SIZE",
                    6..14,
                ),
                value: Spanned(
                    Literal(
                        100,
                    ),
                    17..20,
                ),
            },
            0..21,
        ),
    ),
]
