crates/compiler/parser/tests/snapshots/toplevel::whitespace_only.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
   
	   
  
--- AST ---
[]
