crates/compiler/parser/tests/snapshots/types::fixed_size_array_type_custom_type.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
fn test(x: [MyStruct; 3]) { }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [
                    Parameter {
                        name: Spanned(
                            "x",
                            8..9,
                        ),
                        type_expr: Spanned(
                            FixedArray {
                                element_type: Spanned(
                                    Named(
                                        Spanned(
                                            Custom(
                                                "MyStruct",
                                            ),
                                            12..20,
                                        ),
                                    ),
                                    12..20,
                                ),
                                size: Spanned(
                                    3,
                                    22..23,
                                ),
                            },
                            11..24,
                        ),
                    },
                ],
                return_type: Spanned(
                    Tuple(
                        [],
                    ),
                    0..0,
                ),
                body: [],
            },
            0..29,
        ),
    ),
]
