crates/compiler/parser/tests/snapshots/types::pointer_type.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
fn test(x: felt*) { }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [
                    Parameter {
                        name: Spanned(
                            "x",
                            8..9,
                        ),
                        type_expr: Spanned(
                            Pointer(
                                Spanned(
                                    Named(
                                        Spanned(
                                            Felt,
                                            11..15,
                                        ),
                                    ),
                                    11..15,
                                ),
                            ),
                            11..16,
                        ),
                    },
                ],
                return_type: Spanned(
                    Tuple(
                        [],
                    ),
                    0..0,
                ),
                body: [],
            },
            0..21,
        ),
    ),
]
