crates/compiler/parser/tests/snapshots/types::single_element_tuple_type.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test(x: (felt,)) { }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [
                    Parameter {
                        name: Spanned(
                            "x",
                            10..11,
                        ),
                        type_expr: Named(
                            "felt",
                        ),
                    },
                ],
                return_type: Tuple(
                    [],
                ),
                body: [],
            },
            0..25,
        ),
    ),
]
