crates/compiler/parser/tests/snapshots/types::tuple_type.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
fn test(x: (felt, felt)) { }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [
                    Parameter {
                        name: Spanned(
                            "x",
                            8..9,
                        ),
                        type_expr: Tuple(
                            [
                                Named(
                                    Felt,
                                ),
                                Named(
                                    Felt,
                                ),
                            ],
                        ),
                    },
                ],
                return_type: Tuple(
                    [],
                ),
                body: [],
            },
            0..28,
        ),
    ),
]
